Fix spacing

--- a/src/components/formBuilder/FieldTemplate.module.scss
+++ b/src/components/formBuilder/FieldTemplate.module.scss
@@ -24,3 +24,6 @@
   outline-offset: 6px;
   border-radius: 2px;
 }
+.description {
+  margin-top: 0.5rem; /* Matches `label`'s default `margin-bottom` */
+}
